--- a/package.json
+++ b/package.json
@@ -38,5 +38,9 @@
     "eslint-plugin-react": "^7.12.4",
     "husky": "^1.3.1",
     "lint-staged": "^8.1.5"
+  },
+  "description": "備註：十六週以後的課程尚未完成，作業也還沒決定",
+  "directories": {
+    "example": "examples"
   }
 }
