--- a/package.json
+++ b/package.json
@@ -32,9 +32,9 @@
     "request": "^2.88.2"
   },
   "devDependencies": {
-    "@babel/cli": "^7.10.5",
-    "@babel/core": "^7.11.4",
-    "@babel/preset-env": "^7.11.0",
+    "@babel/cli": "^7.11.6",
+    "@babel/core": "^7.11.6",
+    "@babel/preset-env": "^7.11.5",
     "eslint": "^5.15.1",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.16.0",
@@ -49,6 +49,7 @@
   },
   "description": "備註：十六週以後的課程尚未完成，作業也還沒決定",
   "directories": {
-    "example": "examples"
+    "example": "examples",
+    "lib": "lib"
   }
 }
